package com.frafio.myfinance.features.expenses.components

import androidx.compose.foundation.background
import androidx.compose.material3.ExperimentalMaterial3Api
import androidx.compose.material3.MaterialTheme
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.tooling.preview.Preview
import com.frafio.myfinance.R
import com.frafio.myfinance.core.components.AppBottomSheet
import com.frafio.myfinance.core.components.ListSheetDialog
import com.frafio.myfinance.core.components.MenuItem
import com.frafio.myfinance.core.theme.MyFinanceTheme

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun FilterExpensesSheet(
    show: Boolean,
    onDismiss: () -> Unit,
    categoryEnabled: Boolean,
    labelEnabled: Boolean,
    dateRangeEnabled: Boolean,
    onSelectCategory: () -> Unit,
    onSelectLabel: () -> Unit,
    onSelectDateRange: () -> Unit,
    modifier: Modifier = Modifier,
) {
    AppBottomSheet(
        show = show,
        onDismiss = onDismiss
    ) {
        ListSheetDialog(
            icon = R.drawable.ic_filter_list_filled,
            title = stringResource(id = R.string.filter),
            label = stringResource(id = R.string.select),
            onDismiss = onDismiss,
            items = listOf(
                MenuItem.Resource(
                    iconRes = R.drawable.ic_sell_outline,
                    textRes = R.string.label,
                    testTag = "filter_label",
                    enabled = labelEnabled,
                    onClick = onSelectLabel
                ),
                MenuItem.Resource(
                    iconRes = R.drawable.ic_grid_3x3_filled,
                    textRes = R.string.category,
                    testTag = "filter_category",
                    enabled = categoryEnabled,
                    onClick = onSelectCategory
                ),
                MenuItem.Resource(
                    iconRes = R.drawable.ic_today_outline,
                    textRes = R.string.date_range,
                    testTag = "filter_date_range",
                    enabled = dateRangeEnabled,
                    onClick = onSelectDateRange
                )
            ),
            modifier = modifier
        )
    }
}

@Preview(showBackground = true)
@Composable
fun FilterExpensesSheetPreview() {
    MyFinanceTheme {
        FilterExpensesSheet(
            show = true,
            onDismiss = {},
            onSelectCategory = {},
            onSelectLabel = {},
            onSelectDateRange = {},
            categoryEnabled = true,
            labelEnabled = true,
            dateRangeEnabled = true,
            modifier = Modifier
                .background(color = MaterialTheme.colorScheme.surfaceContainerLow)
        )
    }
}
