...
                FirestoreEnums.CATEGORIES.HOUSING.value,
                FirestoreEnums.CATEGORIES.GROCERIES.value,
                FirestoreEnums.CATEGORIES.PERSONAL_CARE.value
            ),
            labels = listOf("Label 1", "Label 2"),
            dateFilter = Pair(LocalDate.now().minusDays(7), LocalDate.now()),
            getDateLabel = { _, _ -> "Last 7 days" },
            onCategoryRemoved = {},
            onLabelRemoved = {},
            onDateRemoved = {}
        )
    }
}
