...
        LabelsSheet(
            modifier = Modifier
                .background(color = MaterialTheme.colorScheme.surfaceContainerLow),
            show = true,
            onDismiss = {},
            labels = listOf(
                "Travel",
                "Dinner"
            ),
            onLabelCheckedChanged = { _, _ -> },
        )
    }
}
...
