...
        priceState = priceState,
        dateString = viewModel.dateString ?: "",
        onDateClick = {
            focusManager.clearFocus()
            showDatePicker = true
        },
        category = viewModel.category,
        onCategoryClick = {
            focusManager.clearFocus()
            showCategorySheet = true
        },
        labels = viewModel.labels,
        onLabelClick = {
...
            .fillMaxWidth()
            .padding(vertical = 16.dp, horizontal = 16.dp),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        FilledTonalIconButton(
            modifier = Modifier.testTag("add_close_button"),
            onClick = {
                if (isTypeSelectionVisible) {
                    onToggleTypeSelection(false)
                } else {
                    onBackClick()
                }
...
            )
        }

        val typeSelectionState = stringResource(id = if (isTypeSelectionVisible) R.string.expanded else R.string.collapsed)
        TextButton(
            modifier = Modifier
                .testTag("add_type_button")
                .then(
                    if (navKey.requestType == RootKey.RequestType.Add) {
                        Modifier.semantics { stateDescription = typeSelectionState }
                    } else Modifier
                ),
            onClick = {
...
                }
            }
        }

        FilledIconButton(
            modifier = Modifier
                .testTag("add_save_button")
                .padding(end = 4.dp)
                .width(52.dp),
            onClick = onSaveClick,
            enabled = !isAdding,
            shapes = IconButtonDefaults.shapes()
        ) {
...
                                        R.string.income_name
                                ),
                                style = MaterialTheme.typography.headlineSmall
                            )
                        },
                        modifier = Modifier
                            .testTag("add_name_field")
                            .fillMaxWidth()
                            .padding(end = 16.dp),
                        enabled = !isAdding,
                        textStyle = MaterialTheme.typography.headlineSmall,
                        trailingIcon = {
                            if (nameError != null) {
...
                    Text(
                        text = stringResource(id = R.string.amount),
                        style = MaterialTheme.typography.bodyLarge
                    )
                },
                modifier = Modifier
                    .testTag("add_amount_field")
                    .fillMaxWidth(),
                enabled = !isAdding,
                textStyle = MaterialTheme.typography.bodyLarge,
                trailingIcon = {
                    if (priceError != null) {
                        Icon(
...
