...

    <string name="housing">Housing</string>
    <string name="groceries">Groceries</string>
    <string name="personal_care">Personal Care</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="dining">Dining</string>
    <string name="health">Health</string>
    <string name="transportation">Transportation</string>
    <string name="miscellaneous">Miscellaneous</string>

    <string name="manage_labels">Manage labels</string>
    <string name="manage_categories">Manage categories</string>
...
    <string name="health_description">Monitor your healthcare spending, covering insurance premiums, medical bills, medications, and dental or vision care.</string>
    <string name="transportation_description">Track costs related to commuting, such as car payments, fuel, insurance, vehicle maintenance, and public transport fares.</string>
    <string name="miscellaneous_description">Record other expenses like gifts, donations, pet care, and any unexpected costs that arise.</string>

    <string name="select">Select</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save">Save</string>

    <string name="delete_confirmation">Remove from your Account and all connected devices?</string>
    <string name="delete_label_confirmation">Remove from your Account and all connected devices? The associated expenses will not be deleted.</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="reset_password_confirmation">A reset link will be sent to your email address to reset and change your password.</string>
...
