...

@Preview(showBackground = true)
@Composable
fun SearchBarPreview() {
    MyFinanceTheme {
        SearchBar(
            query = "Pizza",
            onQueryChange = {},
            onFilterClick = {},
            modifier = Modifier.padding(16.dp)
        )
    }
}
...
